--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -21,6 +21,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "14.0.9",
     "com.unity.visualscripting": "1.9.1",
+    "xyz.candycoded.hapticfeedback": "https://github.com/CandyCoded/HapticFeedback.git#v1.0.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
